// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox renders correctly when value of showMessageBox is true 1`] = `
<div
  className="messageBox success show"
>
  <div>
    This is message Box
    <button
      className="button close-btn"
      disabled={false}
      name={undefined}
      onClick={[Function]}
      title="close"
    >
      x
    </button>
  </div>
</div>
`;

exports[`MessageBox should have class error when type props is error 1`] = `
<div
  className="messageBox error show"
>
  <div>
    This is message Box
    <button
      className="button close-btn"
      disabled={false}
      name={undefined}
      onClick={[Function]}
      title="close"
    >
      x
    </button>
  </div>
</div>
`;

exports[`MessageBox should not render when value of showMessageBox is not provided or false  1`] = `
<div
  className="messageBox success hide"
/>
`;
